--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,24 @@ httpx==0.27.2
 aiohttp==3.11.6
 pymupdf==1.25.0
 extism==1.0.4
+lxml~=5.3.1
+pyperclip~=1.9.0
+cefpython3~=66.0
+certifi~=2024.12.14
+urllib3~=2.3.0
+pip~=23.2.1
+attrs~=24.3.0
+wheel~=0.41.2
+cffi~=1.17.1
+setuptools~=68.2.0
+packaging~=24.2
+multidict~=6.1.0
+exceptiongroup~=1.2.2
+numpy~=2.0.2
+async-timeout~=5.0.1
+zstandard~=0.23.0
+idna~=3.10
+charset-normalizer~=3.4.1
+pycparser~=2.22
+annotated-types~=0.6.0
+slashr~=1.0.0
