--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -56,6 +56,8 @@ jobs:
           macos-app-icon: assets/icons/moss.png
           macos-app-name: ${{ env.APP_NAME }}
           linux-icon: assets/icons/moss.png
+          nofollow-import-to: |
+            pymupdf.mupdf
           include-data-dir: |
             assets=assets
           include-data-files: |
