Fix extism library for matrix OS

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -64,8 +64,8 @@ jobs:
             assets=assets
           include-data-files: |
             LICENSE=LICENSE
-            ${{ env.EXTISM_DIR }}/libextism_sys.so=extism_sys/libextism_sys.so
             ${{ matrix.os == 'windows-latest' && format('{0}/libpng16-16.dll=libpng16-16.dll', env.PYGAME_DIR) || '' }}
+            ${{ matrix.os == 'windows-latest' && format('{0}/extism_sys.dll=extism_sys/extism_sys.dll', env.EXTISM_DIR) || format('{0}/libextism_sys.so=extism_sys/libextism_sys.so', env.EXTISM_DIR) }}
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
