--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-colorama~=0.4.6
-pillow~=10.4.0
+colorama>=0.4.6
+pillow>=11.2.1
+python-box>=7.2.0
+requests>=2.32.3
+appdirs>=1.4.4
+lxml>=5.3.1
+crossfiledialog>=1.0.0
+pathvalidate>=3.2.3
 pygameextra==2.0.84
-python-box~=7.2.0
-requests~=2.32.3
-appdirs~=1.4.4
-pymupdf~=1.25.0
-extism~=1.0.4
-lxml~=5.3.1
-slashr~=1.0.0
-crossfiledialog~=1.0.0
-rm_api==1.0.0
+pymupdf==1.25.0
+extism==1.0.4
+slashr==1.0.0
+rm_api==1.0.3
 rm_lines==1.0.1
-pathvalidate~=3.2.3
+pylibrm_lines==1.0.0
