Update crowdin config

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,4 @@
 files:
   - source: /assets/translations/en.json
-    translation: /assets/translations/%locale%.json
+    translation: /assets/translations/%two_letters_code%.json
+    scheme: nested_json
